--- a/openpeer-android-sdk/build.gradle
+++ b/openpeer-android-sdk/build.gradle
@@ -15,7 +15,6 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.openpeer.sdk"
         minSdkVersion 14
         targetSdkVersion 21
 
@@ -47,7 +46,7 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
